force-app/main/default/objects/Asset/fields/API_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Equipment_Type__c</fullName>
    <label>API Equipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>