force-app/main/default/objects/Asset/fields/Criticality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Criticality_Rating__c</fullName>
    <label>Criticality Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>