force-app/main/default/objects/Asset/fields/Expected_Lifespan_Days__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lifespan_Days__c</fullName>
    <label>Expected Lifespan (Days)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>