force-app/main/default/objects/Asset/fields/Inspection_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Frequency_Days__c</fullName>
    <label>Inspection Frequency Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>