force-app/main/default/objects/Asset/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>