force-app/main/default/objects/Asset/fields/Next_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Date__c</fullName>
    <label>Next Inspection Date</label>
    <type>Date</type>
</CustomField>