force-app/main/default/objects/Asset/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
                <default>true</default>
                <label>Operational</label>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Beyond Expected Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>