force-app/main/default/objects/Asset/recordTypes/Compressor.recordType-meta.xml
<RecordType>
    <fullName>Compressor</fullName>
    <label>Compressor</label>
    <active>true</active>
</RecordType>