force-app/main/default/objects/Asset/recordTypes/Generator.recordType-meta.xml
<RecordType>
    <fullName>Generator</fullName>
    <label>Generator</label>
    <active>true</active>
</RecordType>