force-app/main/default/objects/Asset/recordTypes/Heater_Treater.recordType-meta.xml
<RecordType>
    <fullName>Heater_Treater</fullName>
    <label>Heater Treater</label>
    <active>true</active>
</RecordType>