force-app/main/default/objects/Asset/recordTypes/Meter.recordType-meta.xml
<RecordType>
    <fullName>Meter</fullName>
    <label>Meter</label>
    <active>true</active>
</RecordType>