force-app/main/default/objects/Asset/recordTypes/Pump.recordType-meta.xml
<RecordType>
    <fullName>Pump</fullName>
    <label>Pump</label>
    <active>true</active>
</RecordType>