force-app/main/default/objects/Asset/recordTypes/Separator.recordType-meta.xml
<RecordType>
    <fullName>Separator</fullName>
    <label>Separator</label>
    <active>true</active>
</RecordType>