force-app/main/default/objects/Asset/recordTypes/Tank.recordType-meta.xml
<RecordType>
    <fullName>Tank</fullName>
    <label>Tank</label>
    <active>true</active>
</RecordType>