force-app/main/default/objects/Asset/recordTypes/Valve.recordType-meta.xml
<RecordType>
    <fullName>Valve</fullName>
    <label>Valve</label>
    <active>true</active>
</RecordType>